--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <div class="section-title">
           <h2>POEMS</h2>
           <p>my Poems.</p>
+          <p> tap on poems and read <p>
         </div>
 
         <div class="row ">
