--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="section-title">
           <h2>POEMS</h2>
           <p>my Poems.</p>
-          <p> tap on poems and read <p>
+          <h4> Tap on poems and read. ENJOY</h4>
         </div>
 
         <div class="row ">
